name:                relay
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license:             AllRightsReserved
author:              Alex Babkin
maintainer:          ababkin@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8

executable relay
  hs-source-dirs: src
  main-is:        Main.hs
  -- main-is:        Example.hs
  -- exposed-modules:
    -- Deliver.CommandLine.Main

  -- ghc-options:    -O3 -Wall -threaded
  ghc-options:    -Wall
  build-depends:
      base >= 4 && <= 5
    , either
    , mtl
    , transformers
    , errors
    , scotty
    , wreq
    , bytestring
    , text
    , lens

